# Agentic-RAG

./: .gitignore  GmailAPI.py  LICENSE  README.md  pyproject.toml  testing_gmail.py
app/: main.py
app/agents/: Tool_schema.py  orchestrartor.py
app/agents/tools/: email.py  email_tool.py
app/config/: settings.py
app/services/: RAG.py  chat.py  chunking.py  embeddings.py
sql/: database.py  init_supabase.sql  supabase_semantic_search.py
