[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "simplegmail>=4.1.1",
    "supabase>=2.31.0",
]
